<resources>
    <string name="app_name">DoDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="completion">완료</string>
    <string name="to_do">To-do</string>
    <string name="set_importance">중요도 설정하기</string>
    <string name="set_deadline">마감날짜 설정하기</string>
    <string name="set_alarm">알람 설정하기</string>
    
    <string name="before_start">시작 전으로</string>
    <string name="progressing">진행 중으로</string>
    <string name="pause">중지로</string>
    <string name="complete">완료로</string>
</resources>