<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_1">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <Button
            android:id="@+id/completeButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="completeWriting"
            android:background="@color/transparent"
            android:text="@string/complete"
            android:textColor="@color/gray_3"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toDoInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/to_do"
            android:maxLength="200"
            android:textColor="@color/gray_4" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/importanceIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_importance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/set_importance" />

            <Button
                android:id="@+id/importance1"
                style="@style/importance_number_style"
                android:text="1" />

            <Button
                android:id="@+id/importance2"
                style="@style/importance_number_style"
                android:text="2" />

            <Button
                android:id="@+id/importance3"
                style="@style/importance_number_style"
                android:text="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:onClick="setDeadLine"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/set_deadline" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:onClick="setAlarm"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/alarmIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_alarm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/set_alarm" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
